--- a/view/search.html
+++ b/view/search.html
@@ -1,7 +1,7 @@
 <h2 class="text-center">Пошук оголошення</h2>
 <form role="form" class="form-horizontal" method="GET" action="/search/">
     <div class="form-group">
-        <div class="col-xs-2">
+        <div class="col-xs-3">
             <select name="category_id" title="Категорія" class="form-control">
                 <option value="0">Всі категорії</option>
                 <%for(var k in list){%>
@@ -15,7 +15,7 @@
                 <%}%>
             </select>
         </div>
-        <div class="col-xs-4">
+        <div class="col-xs-2">
             <input type="text" placeholder="Назва/опис" class="form-control" value="<%-query.text%>" name="text" />
         </div>
         <div class="col-xs-2">
@@ -25,6 +25,20 @@
             <input type="number" placeholder="Ціна до" class="form-control" value="<%-query.price_to%>" min="0" step="10" name="price_to" />
         </div>
         <div class="col-xs-2">
+            <select id="currency_id" name="currency_id" class="form-control">
+                <option value="0">Будь-яка валюта</option>
+                <%for(var k in currencies){%>
+                <option value="<%-currencies[k].currency_id%>"
+                    <%if(currencies[k].currency_id==query.currency_id){%>
+                    selected="selected"
+                    <%}%>
+                    >
+                    <%-currencies[k].sign%>
+                </option>
+                <%}%>
+            </select>
+        </div>
+        <div class="col-xs-1">
             <button type="submit" class="btn btn-success">Пошук</button>
         </div>
     </div>
@@ -56,7 +70,11 @@
                 <div class="panel-body">
                     <span class="text-danger">Ціна:</span>
                     <a class="text-success" href="/adv/<%-items[k].adv_id%>/">
-                        <%-items[k].price%>
+                        <%if (items[k].position==0){%>
+                            <%-items[k].sign%> <%-items[k].price%>
+                        <%} else {%>
+                            <%-items[k].price%> <%-items[k].sign%>
+                        <%}%>
                     </a>
                 </div>
                 <div  class="panel-footer">
@@ -67,6 +85,3 @@
         </div>
     <%}%>
 <%}%>
-
-
-
