--- a/view/search.html
+++ b/view/search.html
@@ -56,7 +56,7 @@
         <div class="panel-group">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    <span class="text-danger"><%-items[k].category_name%>:</span>
+                    <span class="text-danger"><%-items[k].category_name%> </span>
                     <a class="text-success" href="/adv/<%-items[k].adv_id%>/">
                         <%-items[k].name%>
                     </a>
